<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_general"
    >

    <LinearLayout
        android:id="@+id/llFiltroMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvFiltroMes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tv_filtro_mes"
            android:textSize="@dimen/size_filtro_mes"
            android:textColor="@color/black"
            />

        <Spinner
            android:id="@+id/spFiltroMes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/meses"
            android:spinnerMode="dropdown"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFiltroAnio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llFiltroMes"
        >

        <TextView
            android:id="@+id/tvFiltroAnio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tv_filtro_anio"
            android:textSize="@dimen/size_filtro_mes"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etFiltroAnio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/hint_et_anio"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFiltroPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llFiltroAnio"
        >

        <TextView
            android:id="@+id/tvFiltroPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tv_filtro_pais"
            android:textSize="@dimen/size_filtro_mes"
            android:textColor="@color/black"
            />

        <Spinner
            android:id="@+id/spFiltroPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            />

    </LinearLayout>

</RelativeLayout>