<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_general"
    >

    <LinearLayout
        android:id="@+id/llMostrarInfoTerremoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/llMostrarInfoTerremotoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvSeeNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSeeTerremoto"
                android:textSize="@dimen/text_size_tv_fijo"
                android:textStyle="bold"
                android:layout_weight="2"
                />
            <TextView
                android:id="@+id/tvSeeNombreTerremoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMostrarInfoTerremotoMagnitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvSeeMagnitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSeeMagnitud"
                android:textSize="@dimen/text_size_tv_fijo"
                android:textStyle="bold"
                android:layout_weight="3"
                />
            <TextView
                android:id="@+id/tvSeeMagnitudTerremoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                />
            <TextView
                android:id="@+id/tvSeeFechaHoraTerremoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_tv_fijo"
                android:layout_weight="2"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMostrarInfoTerremotoLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvSeeNombreLugarTerremoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_tv_fijo"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMostrarInfoTerremotoCoordenadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvSeeCoordenadasTerremoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMostrarInfoTerremotoMuertos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvSeeMuertos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSeeMuertos"
                android:textSize="@dimen/text_size_tv_fijo"
                android:textStyle="bold"
                android:layout_weight="3"
                />
            <TextView
                android:id="@+id/tvSeeMuertosTerremoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>